Closed Bug 1090444 Opened 11 years ago Closed 11 years ago

The Printing Progress dialog does not show progress or close when opened from the child process

Categories

(Core :: Printing: Output, defect)

32 Branch
x86
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla36
Tracking Status
e10s m4+ ---

People

(Reporter: mconley, Assigned: mconley)

References

Details

Attachments

(2 files, 3 obsolete files)

When the Printing Progress dialog is opened in the child process (when kicking off a print in e10s, for example), it does not show progress, and doesn't close on its own when processing of the print job is complete. This is because the plumbing to message the progress dialog in the parent process with progress data from the child hasn't been set up yet.
Assignee: nobody → mconley
Status: NEW → ASSIGNED
Ok, I think I've got a plan here: I'm going to introduce a new IPC protocol "PPrintProgressDialog", and have it managed by PPrinting. That protocol will be used to channel progress updates from the child to the parent. The PPrintProgressDialogChild implementation will also implement the nsIWebProgressListener and nsIPrintProgressParams interfaces and be whats handed back to the showProgress caller. When the caller drops references to the PPrintProgressDialogChild (through those nsIWebProgressListener and nsIPrintProgressParams interfaces), on destruction, send a signal to the parent before destroying. There's a little bit of lifetime management stuff to work out, but I think I can handle it. Expect some patches today.
Attachment #8517646 - Attachment is obsolete: true
Attachment #8518212 - Attachment is obsolete: true
Attachment #8518636 - Attachment is obsolete: true
Comment on attachment 8520174 [details] [diff] [review] The Printing Progress dialog does not show progress or close when opened from the child process. r=? Hey blassey - you reviewed the last chunk of printing platform work I did... did you want a crack at this too, or should I find another volunteer?
Attachment #8520174 - Flags: review?(blassey.bugs)
Comment on attachment 8520174 [details] [diff] [review] The Printing Progress dialog does not show progress or close when opened from the child process. r=? Review of attachment 8520174 [details] [diff] [review]: ----------------------------------------------------------------- ::: embedding/components/printingui/ipc/PPrintProgressDialog.ipdl @@ +18,5 @@ > + > + ProgressChange(long curSelfProgress, > + long maxSelfProgress, > + long curTotalProgress, > + long maxTotalProgress); whitespace looks off
Attachment #8520174 - Flags: review?(blassey.bugs) → review+
Whiteboard: [fixed-in-fx-team]
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Whiteboard: [fixed-in-fx-team]
Target Milestone: --- → mozilla36
Depends on: 1098244
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: