Bug 1090444 - The Printing Progress dialog does not show progress or close when opened from the child process. r=blassey.

We now proxy progress updates from the child up to the parent over IPC.