embedding/components/printingui/ipc/PrintProgressDialogChild.h
@@ -1,0 +1,40 @@
+/* This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
+
+#ifndef mozilla_embedding_PrintProgressDialogChild_h
+#define mozilla_embedding_PrintProgressDialogChild_h
+
+#include "mozilla/embedding/PPrintProgressDialogChild.h"
+#include "nsIPrintProgressParams.h"
+#include "nsIWebProgressListener.h"
+
+class nsIObserver;
+
+namespace mozilla {
+namespace embedding {
+
+class PrintProgressDialogChild MOZ_FINAL : public PPrintProgressDialogChild,
+                                           public nsIWebProgressListener,
+                                           public nsIPrintProgressParams
+{
+  NS_DECL_ISUPPORTS
+  NS_DECL_NSIWEBPROGRESSLISTENER
+  NS_DECL_NSIPRINTPROGRESSPARAMS
+
+public:
+  MOZ_IMPLICIT PrintProgressDialogChild(nsIObserver* aOpenObserver);
+
+  virtual bool RecvDialogOpened();
+
+private:
+  virtual ~PrintProgressDialogChild();
+  nsCOMPtr<nsIObserver> mOpenObserver;
+  nsString mDocTitle;
+  nsString mDocURL;
+};
+
+} // namespace embedding
+} // namespace mozilla
+
+#endif
